--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.4.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^7.2.0",
     "@react-native-firebase/auth": "^8.0.4",
